@@ -36,7 +36,7 @@ fi
 
 AC_CHECK_PROG(have_pkg_config, pkg-config, yes, no)
 if test x"$have_pkg_config" = "xno"; then
-    AC_MSG_ERROR(pkg-config is required to install this program)
+    AC_MSG_ERROR(pkg-config is required to configure this program)
 fi
 PKG_PROG_PKG_CONFIG
 
